--- a/muduo/net/CMakeLists.txt
+++ b/muduo/net/CMakeLists.txt
@@ -21,9 +21,9 @@ install(FILES ${HEADERS} DESTINATION include/muduo/net)
 #add_subdirectory(http)
 #add_subdirectory(inspect)
 
-#if(MUDUO_BUILD_EXAMPLES)
-#  add_subdirectory(tests)
-#endif()
+if(MUDUO_BUILD_EXAMPLES)
+  add_subdirectory(tests)
+endif()
 
 #if(PROTOBUF_FOUND)
 #  add_subdirectory(protobuf)
